--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -30,8 +30,8 @@
 		$('#vuln_list_table_toolbar .abutton_selectall').on('click', {'dt': dt_vuln_list_table}, Sner.dt.selectall);
 		$('#vuln_list_table_toolbar .abutton_selectnone').on('click', {'dt': dt_vuln_list_table}, Sner.dt.selectnone);
 		$('#vuln_list_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_vuln_list_table, 'url': Flask.url_for('storage.vuln_tag_by_id_route'), 'action': 'set'}, Sner.action_tag_by_id);
-		$('#vuln_list_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_vuln_list_table, 'url': "{{ url_for('storage.vuln_delete_by_id_route') }}"}, Sner.action_delete_by_id);
 		$('#vuln_list_table_toolbar .abutton_untagmulti').on('click', {'dt': dt_vuln_list_table, 'url': Flask.url_for('storage.vuln_tag_by_id_route'), 'action': 'unset'}, Sner.action_tag_by_id);
+		$('#vuln_list_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_vuln_list_table, 'url': Flask.url_for('storage.vuln_delete_by_id_route')}, Sner.action_delete_by_id);
 	});
 </script>
 {% endblock %}
