--- a/sner/server/templates/auth/pageparts.html
+++ b/sner/server/templates/auth/pageparts.html
@@ -3,18 +3,18 @@
 <script id="auth.pagepart-user_controls.hbs" type="text/x-handlebars-template">
 	<div class="btn-group btn-group-sm">
 		<a class="btn btn-outline-secondary" href="{{> auth.user_edit_route user_id=id}}"><i class="fas fa-edit"></i></a>
-		<a class="btn btn-outline-secondary abutton_delete_by_url" data-url="{{> auth.user_delete_route user_id=id}}"><i class="fas fa-trash text-danger"></i></a>
+		<a class="btn btn-outline-secondary abutton_submit_dataurl_delete" data-url="{{> auth.user_delete_route user_id=id}}"><i class="fas fa-trash text-danger"></i></a>
 	</div>
 </script>
 
 <script id="auth.pagepart-user_apikey_controls.hbs" type="text/x-handlebars-template">
-	{{apikey}} <a class="btn btn-outline-secondary btn-sm abutton_userapikey_by_url" data-url="{{> auth.user_apikey_route user_id=user_id action=action}}">{{capitalize action}}</a>
+	{{apikey}} <a class="btn btn-outline-secondary btn-sm abutton_userapikey" data-url="{{> auth.user_apikey_route user_id=user_id action=action}}">{{capitalize action}}</a>
 </script>
 
 <script id="auth.pagepart-profile_webauthn_controls.hbs" type="text/x-handlebars-template">
 	<div class="btn-group btn-group-sm">
 		<a class="btn btn-outline-secondary" href="{{> auth.profile_webauthn_edit_route webauthn_id=id}}"><i class="fas fa-edit"></i></a>
-		<a class="btn btn-outline-secondary abutton_delete_by_url" data-url="{{> auth.profile_webauthn_delete_route webauthn_id=id}}"><i class="fas fa-trash text-danger"></i></a>
+		<a class="btn btn-outline-secondary abutton_sbumit_dataurl_delete" data-url="{{> auth.profile_webauthn_delete_route webauthn_id=id}}"><i class="fas fa-trash text-danger"></i></a>
 	</div>
 </script>
 {% endraw %}
