--- a/sner/server/templates/scheduler/pageparts.html
+++ b/sner/server/templates/scheduler/pageparts.html
@@ -3,7 +3,7 @@
 <script id="scheduler.pagepart-excl_controls.hbs" type="text/x-handlebars-template">
 	<div class="btn-group btn-group-sm">
 		<a class="btn btn-outline-secondary" href="{{> scheduler.excl_edit_route excl_id=id}}"><i class="fas fa-edit"></i></a>
-		<a class="btn btn-outline-danger abutton_delete_by_url" data-url="{{> scheduler.excl_delete_route excl_id=id}}"><i class="fas fa-trash text-danger"></i></a>
+		<a class="btn btn-outline-danger abutton_submit_dataurl_delete" data-url="{{> scheduler.excl_delete_route excl_id=id}}"><i class="fas fa-trash text-danger"></i></a>
 	</div>
 </script>
 
@@ -11,7 +11,7 @@
 	<div class="btn-group btn-group-sm">
 		<a class="btn btn-outline-secondary" href="{{> scheduler.task_edit_route task_id=id}}"><i class="fas fa-edit"></i></a>
 		<a class="btn btn-outline-secondary" href="{{> scheduler.queue_add_route task_id=id}}">Add queue</a>
-		<a class="btn btn-outline-danger abutton_delete_by_url" data-url="{{> scheduler.task_delete_route task_id=id}}"><i class="fas fa-trash text-danger"></i></a>
+		<a class="btn btn-outline-danger abutton_submit_dataurl_delete" data-url="{{> scheduler.task_delete_route task_id=id}}"><i class="fas fa-trash text-danger"></i></a>
 	</div>
 </script>
 
@@ -19,15 +19,15 @@
 	<div class="btn-group btn-group-sm">
 		<a class="btn btn-outline-secondary" href="{{> scheduler.queue_edit_route queue_id=id}}"><i class="fas fa-edit"></i></a>
 		<a class="btn btn-outline-secondary" href="{{> scheduler.queue_enqueue_route queue_id=id}}" title="Put targets to queue">Enqueue</a>
-		<a class="btn btn-outline-secondary abutton_queueflush_by_url" href="#" data-url="{{> scheduler.queue_flush_route queue_id=id}}" title="Flush all targets from queue">Flush</a>
-		<a class="btn btn-outline-secondary abutton_queueprune_by_url" href="#" data-url="{{> scheduler.queue_prune_route queue_id=id}}" title="Delete all jobs associated with queue">Prune</a>
-		<a class="btn btn-outline-secondary abutton_delete_by_url" data-url="{{> scheduler.queue_delete_route queue_id=id}}"><i class="fas fa-trash text-danger"></i></a>
+		<a class="btn btn-outline-secondary abutton_submit_dataurl_queueflush" href="#" data-url="{{> scheduler.queue_flush_route queue_id=id}}" title="Flush all targets from queue">Flush</a>
+		<a class="btn btn-outline-secondary abutton_submit_dataurl_queueprune" href="#" data-url="{{> scheduler.queue_prune_route queue_id=id}}" title="Delete all jobs associated with queue">Prune</a>
+		<a class="btn btn-outline-secondary abutton_submit_dataurl_delete" data-url="{{> scheduler.queue_delete_route queue_id=id}}"><i class="fas fa-trash text-danger"></i></a>
 	</div>
 </script>
 
 <script id="scheduler.pagepart-job_controls.hbs" type="text/x-handlebars-template">
 	<div class="btn-group btn-group-sm">
-		<a class="btn btn-outline-secondary abutton_delete_by_url" data-url="{{> scheduler.job_delete_route job_id=id}}"><i class="fas fa-trash text-danger"></i></a>
+		<a class="btn btn-outline-secondary abutton_submit_dataurl_delete" data-url="{{> scheduler.job_delete_route job_id=id}}"><i class="fas fa-trash text-danger"></i></a>
 	</div>
 </script>
 {% endraw %}
