server: newui phase2; refactor javascript functions to separate library, pageparts to library

--- a/sner/server/templates/auth/profile/index.html
+++ b/sner/server/templates/auth/profile/index.html
@@ -11,7 +11,7 @@
 			Sner.dt.column('id', {'visible': false}),
 			Sner.dt.column('name'),
 			Sner.dt.column('registered'),
-			Sner.dt.column_buttons(auth_pagepart_profile_webauthn_controls)
+			Sner.dt.column_buttons(Sner.auth.hbs.profile_webauthn_controls)
 		],
 		'ordering': false,
 		'paging': false,
