--- a/sner/server/templates/scheduler/excl/list.html
+++ b/sner/server/templates/scheduler/excl/list.html
@@ -12,7 +12,7 @@
 			Sner.dt.column('family'),
 			Sner.dt.column('value'),
 			Sner.dt.column('comment'),
-			Sner.dt.column_buttons(scheduler_pagepart_excl_controls)
+			Sner.dt.column_buttons(Sner.scheduler.hbs.excl_controls)
 		]
 	};
 	$(document).ready(function() {
