--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -16,7 +16,7 @@
 			Sner.dt.column('time_start'),
 			Sner.dt.column('time_end'),
 			Sner.dt.column('time_taken'),
-			Sner.dt.column_buttons(scheduler_pagepart_job_controls)
+			Sner.dt.column_buttons(Sner.scheduler.hbs.job_controls)
 		],
 		'order': [[6, 'desc'], [7, 'desc']]
 	};
