--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -10,14 +10,14 @@
 		'columns': [
 			Sner.dt.column('id', {'visible': false}),
 			Sner.dt.column('host_id', {'visible': false}),
-			Sner.dt.column('host_address', {'render': function (data, type, row, meta) { return storage_pagepart_host_link(row); }}),
+			Sner.dt.column('host_address', {'render': function(data, type, row, meta) { return Sner.storage.hbs.host_link(row); }}),
 			Sner.dt.column('host_hostname'),
 			Sner.dt.column('service'),
 			Sner.dt.column('xtype'),
 			Sner.dt.column('data', {'className': 'forcewrap'}),
 			Sner.dt.column('tags'),
 			Sner.dt.column('comment'),
-			Sner.dt.column_buttons(storage_pagepart_note_controls)
+			Sner.dt.column_buttons(Sner.storage.hbs.note_controls)
 		]
 	};
 	$(document).ready(function() {
