--- a/sner/server/templates/scheduler/task/list.html
+++ b/sner/server/templates/scheduler/task/list.html
@@ -13,7 +13,7 @@
 			Sner.dt.column('module'),
 			Sner.dt.column('params'),
 			Sner.dt.column('nr_queues'),
-			Sner.dt.column_buttons(scheduler_pagepart_task_controls)
+			Sner.dt.column_buttons(Sner.scheduler.hbs.task_controls)
 		]
 	};
 	$(document).ready(function() {
