--- a/sner/server/templates/storage/vuln/grouped.html
+++ b/sner/server/templates/storage/vuln/grouped.html
@@ -8,8 +8,8 @@
 	var dt_vuln_grouped_table_options = {
 		'ajax': {'url': "{{ url_for('storage.vuln_grouped_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
-			Sner.dt.column('name', {'render': function (data, type, row, meta) { return storage_pagepart_vuln_list_filter_name_link({'name': row['name'], 'name_encoded': encodeURIComponent(row['name'])}); }}),
-			Sner.dt.column('severity', {'render': function (data, type, row, meta) { return storage_pagepart_severity_label(row); }}),
+			Sner.dt.column('name', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_list_filter_name_link({'name': row['name'], 'name_encoded': encodeURIComponent(row['name'])}); }}),
+			Sner.dt.column('severity', {'render': function(data, type, row, meta) { return Sner.storage.hbs.severity_label(row); }}),
 			Sner.dt.column('tags'),
 			Sner.dt.column('cnt_vulns')
 		]
