--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -11,16 +11,16 @@
 			Sner.dt.column_select(),
 			Sner.dt.column('id', {'visible': false}),
 			Sner.dt.column('host_id', {'visible': false}),
-			Sner.dt.column('host_address', {'render': function (data, type, row, meta) { return storage_pagepart_host_link(row); }}),
+			Sner.dt.column('host_address', {'render': function(data, type, row, meta) { return Sner.storage.hbs.host_link(row); }}),
 			Sner.dt.column('host_hostname'),
 			Sner.dt.column('service'),
-			Sner.dt.column('name', {'render': function (data, type, row, meta) { return storage_pagepart_vuln_link(row); }}),
+			Sner.dt.column('name', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_link(row); }}),
 			Sner.dt.column('xtype', {'visible': false}),
-			Sner.dt.column('severity', {'render': function (data, type, row, meta) { return storage_pagepart_severity_label(row); }}),
-			Sner.dt.column('refs', {'render': function (data, type, row, meta) { return storage_pagepart_vuln_refs(row); }}),
+			Sner.dt.column('severity', {'render': function(data, type, row, meta) { return Sner.storage.hbs.severity_label(row); }}),
+			Sner.dt.column('refs', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_refs(row); }}),
 			Sner.dt.column('tags'),
 			Sner.dt.column('comment'),
-			Sner.dt.column_buttons(storage_pagepart_vuln_controls)
+			Sner.dt.column_buttons(Sner.storage.hbs.vuln_controls)
 		],
 		'order': [[1, 'asc']],
 		'select': {'style': 'multi', 'selector': 'td:first-child'}
