--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -15,10 +15,14 @@
 			Sner.dt.column('service'),
 			Sner.dt.column('xtype'),
 			Sner.dt.column('data', {'className': 'forcewrap'}),
-			Sner.dt.column('tags'),
-			Sner.dt.column('comment'),
+			Sner.dt.column('tags', {'className': 'abutton_annotate'}),
+			Sner.dt.column('comment', {'className': 'abutton_annotate'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.note_controls)
-		]
+		],
+		'drawCallback': function (settings) {
+			Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
+			this.find('td.abutton_annotate').on('dblclick', {'dt': this.api(), 'route_name': 'storage.note_annotate_route'}, Sner.storage.action_annotate);
+		}
 	};
 	$(document).ready(function() {
 		var dt_note_list_table = $('#note_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_note_list_table_options));
