--- a/sner/server/templates/storage/annotate.html
+++ b/sner/server/templates/storage/annotate.html
@@ -1,8 +1,10 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% import "bootstrap_wtf.html" as bwtf %}
+{% import "common_macros.html" as cm %}
 <form method="post" action="{{ request.url }}">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.tags, horizontal=True) }}
+	{{ cm.addtag_buttons() }}
 	{{ bwtf.bootstrap_field(form.comment, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
