--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -22,6 +22,7 @@
 	{{ bwtf.bootstrap_field(form.name, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.info, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.tags, horizontal=True) }}
+	{{ cm.addtag_buttons() }}
 	{{ bwtf.bootstrap_field(form.comment, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
