--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -24,6 +24,7 @@
 	{{ bwtf.bootstrap_field(form.data, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.refs, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.tags, horizontal=True) }}
+	{{ cm.addtag_buttons() }}
 	{{ bwtf.bootstrap_field(form.comment, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
