--- a/sner/server/templates/storage/host/addedit.html
+++ b/sner/server/templates/storage/host/addedit.html
@@ -13,6 +13,7 @@
 	{{ bwtf.bootstrap_field(form.hostname, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.os, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.tags, horizontal=True) }}
+	{{ cm.addtag_buttons() }}
 	{{ bwtf.bootstrap_field(form.comment, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
