--- a/sner/server/templates/storage/note/addedit.html
+++ b/sner/server/templates/storage/note/addedit.html
@@ -20,6 +20,7 @@
 	{{ bwtf.bootstrap_field(form.xtype, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.data, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.tags, horizontal=True) }}
+	{{ cm.addtag_buttons() }}
 	{{ bwtf.bootstrap_field(form.comment, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
