server: newui phase3; server: ui datatables tags render as labels (as in vuln.view)
https://gitlab.flab.cesnet.cz/bodik/sner4/issues/197

--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -9,13 +9,13 @@
 		'ajax': {'url': "{{ url_for('storage.host_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			Sner.dt.column('id', {'visible': false}),
-			Sner.dt.column('address', {'render': function (data, type, row, meta) { return Sner.storage.hbs.host_link({'host_id': row['id'], 'host_address': row['address']}); }}),
+			Sner.dt.column('address', {'render': function(data, type, row, meta) {return Sner.storage.hbs.host_link({'host_id': row['id'], 'host_address': row['address']});}}),
 			Sner.dt.column('hostname'),
 			Sner.dt.column('os'),
 			Sner.dt.column('cnt_s'),
 			Sner.dt.column('cnt_v'),
 			Sner.dt.column('cnt_n'),
-			Sner.dt.column('tags', {'className': 'abutton_annotate'}),
+			Sner.dt.column('tags', {'className': 'abutton_annotate', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
 			Sner.dt.column('comment', {'className': 'abutton_annotate'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.host_controls)
 		],
