--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -15,7 +15,7 @@
 			Sner.dt.column('service'),
 			Sner.dt.column('xtype'),
 			Sner.dt.column('data', {'className': 'forcewrap'}),
-			Sner.dt.column('tags', {'className': 'abutton_annotate'}),
+			Sner.dt.column('tags', {'className': 'abutton_annotate', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
 			Sner.dt.column('comment', {'className': 'abutton_annotate'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.note_controls)
 		],
